--- a/DownloadManager/DownloadManager/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/DownloadManager/DownloadManager/ClientApp/app/components/navmenu/navmenu.component.html
@@ -27,6 +27,11 @@
                         <span class='glyphicon glyphicon-th-list'></span> Fetch data
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/files']">
+                        <span class='glyphicon glyphicon-th-list'></span> Files test
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
