--- a/DownloadManager/DownloadManager/ClientApp/app/components/files/files.component.html
+++ b/DownloadManager/DownloadManager/ClientApp/app/components/files/files.component.html
@@ -1,4 +1,4 @@
 ﻿<p>Paste link</p>
 
 <input type="text" [(ngModel)]="link" />
-<input type="button" (click)="start" value="Click Me" />
+<input type="button" (click)="start()" value="Click Me" />
