add Server Side Events to stream current progress

--- a/DownloadManager/DownloadManager/ClientApp/app/components/files/files.component.html
+++ b/DownloadManager/DownloadManager/ClientApp/app/components/files/files.component.html
@@ -2,3 +2,11 @@
 
 <input type="text" [(ngModel)]="link" />
 <input type="button" (click)="start()" value="Click Me" />
+
+<hr/>
+
+{{ speed }}
+
+<br/>
+
+<pre>{{ files }}</pre>
