--- a/DownloadManager/DownloadManager/ClientApp/app/components/files/files.component.html
+++ b/DownloadManager/DownloadManager/ClientApp/app/components/files/files.component.html
@@ -1,13 +1,14 @@
 ﻿<p>Paste link</p>
 
-<input type="text" [(ngModel)]="link" placeholder="link to download"/>
-<input type="number" [(ngModel)]="threads" placeholder="threads count limit"/>
-<input type="number" [(ngModel)]="bytes" placeholder="bytes per second limit"/>
+<input type="text" [(ngModel)]="link" placeholder="link to download" />
+<input type="number" [(ngModel)]="threads" placeholder="threads count limit" />
+<input type="number" [(ngModel)]="bytes" placeholder="bytes per second limit" />
+
 <select [(ngModel)]="unit">
     <option value="0">Mbit</option>
     <option value="1">Kbit</option>
 </select>
-<input type="button" (click)="start()" value="Click Me" />
+<input type="button" class="btn" (click)="start()" value="Click Me" [disabled]="!link || !threads || bytes == null" />
 
 <hr/>
 <p style="color: red">{{ exception }}</p>
